--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -185,7 +185,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
               <p>
                 <strong>2. Kinematics:</strong> Using the polar
                 basis acceleration equation <a
-                href="rkv.html#rkv-ep">#rkv-ep</a> gives:
+                href="/dyn/particle_kinematics#rkv-ep">#rkv-ep</a> gives:
                 <DisplayEquation equation="\\begin{aligned} \\vec{a} &amp;= (\\ddot{r} - r\\dot\\theta^2) \\,\\hat{e}_r + (r\\ddot\\theta + 2\\dot{r}\\dot\\theta) \\,\\hat{e}_\\theta \\\\ &amp;= -\\ell \\dot\\theta^2 \\,\\hat{e}_r + \\ell\\ddot\\theta \\,\\hat{e}_\\theta. \\end{aligned}" />
               </p>
               <p>
@@ -446,8 +446,8 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <CalloutContainer slot="cards">
             <CalloutCard title="Required material">
                 <ul>
-                    <li><a href="rep.html">Kinetics of point masses</a></li>
-                    <li><a href="reg.html">Kinetics of rigid bodies</a></li>
+                    <li>Kinetics of point masses</li>
+                    <li><a href="/dyn/rigid_body_kinetics">Kinetics of rigid bodies</a></li>
                   </ul>
             </CalloutCard>
             <CalloutCard title="Extras!">
@@ -611,7 +611,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         class="seq-toggle:avb-fp-c:fbd" onclick="avb_fp_c.stepSequence('fbd')">free body diagram</button>
         is visible. Now increase the speed of the bus to produce a
         centripetal acceleration. <a
-        href="rkn.html#rkn-en">Newton's law</a> implies that there
+        href="/sta/introduction#rkn-en">Newton's law</a> implies that there
         must be a centripetal friction force producing this
         acceleration. As the speed increases, we will eventually
         reach a point when the friction force required is too large
